terminado y en revision de entrega

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
    
     </header>
 
-<main>
-    <h1>hola desde bootstrap</h1>
+<main class="text-center">
+    <h1>Aplicacion Multiplicador y factorial</h1>
 </main>
 
     
